--- a/game.html
+++ b/game.html
@@ -764,7 +764,7 @@
         playerRef.set({ name: "Guest", joinedAt: Date.now() });
 
         // Fala para convidados
-        speakText("You're playing as a guest. Your progress won't be saved.", () => {
+        speakText("Welcome, Guest! Please note that your score won’t be saved unless you log in. Take a guess and challenge yourself to be the first to uncover the hidden word. Don’t forget to use the Invite button to bring your friends along and make the game even more exciting!", () => {
           tryButton.scrollIntoView({ behavior: "smooth", block: "center" });
           tryButton.focus();
         });
@@ -888,7 +888,7 @@
 
           // 2) Fala final para todos, incluindo o nome do vencedor
           const theWinner = data.winnerName || "someone";
-          const finalText = `Congratulations, ${theWinner}! You discovered the hidden word: ${currentWord}. ` +
+          const finalText = `Congratulations player ${theWinner}! You discovered the hidden word: ${currentWord}. ` +
                             `The word means: ${data.definition}`;
 
           speakText(finalText, () => {
