--- a/game.html
+++ b/game.html
@@ -1271,6 +1271,13 @@
         loginButton.style.display = "none";
       }
     }
+
+/*******************************************************
+ * 24) BOTÃO BACK
+ *******************************************************/
+backButton.addEventListener("click", () => {
+  window.history.back();
+});
   </script>
 </body>
 </html>
