--- a/Carrossel/index.html
+++ b/Carrossel/index.html
@@ -67,20 +67,10 @@
       object-fit: cover;
     }
 
-    .content-text {
-      position: absolute;
-      top: 100%;
-      left: 50%;
-      transform: translate(-50%, -10%);
-      font-size: 12px;
-      color: #333;
-      text-align: center;
-    }
-
     #info-container {
       width: 80%;
       margin: 20px auto;
-      padding: 10px;
+      padding: 15px;
       border: 1px solid #ccc;
       border-radius: 8px;
       background-color: #f9f9f9;
@@ -115,34 +105,28 @@
   <div id="circles-container">
     <!-- Conteúdo principal (círculo do meio) -->
     <div id="main-circle-content">
-      <img src="imagens/globo.gif" alt="Globo">
+      <img src="imagens/globo.gif" alt="Globo" data-title="Globo" data-text="Bem-vindo ao carrossel circular. Clique em um item para mais informações.">
     </div>
 
     <!-- Círculo rotatório com miniaturas -->
     <div id="circle">
-      <div class="min-circle" style="top: 10%; left: 50%; transform: translate(-50%, 0);" data-img="imagens/img1.png" data-title="Título 1" data-text="Lorem ipsum dolor sit amet, consectetur adipiscing elit.">
+      <div class="min-circle" style="top: 10%; left: 50%; transform: translate(-50%, 0);" data-img="imagens/img1.png" data-title="Título 1" data-text="Descrição fictícia para a imagem 1.">
         <img src="imagens/img1.png" alt="Imagem 1">
-        <div class="content-text">Texto 1</div>
       </div>
-      <div class="min-circle" style="top: 30%; left: 85%; transform: translate(-50%, 0);" data-img="imagens/img2.png" data-title="Título 2" data-text="Praesent tincidunt consectetur diam, eu facilisis erat efficitur ut.">
+      <div class="min-circle" style="top: 30%; left: 85%; transform: translate(-50%, 0);" data-img="imagens/img2.png" data-title="Título 2" data-text="Descrição fictícia para a imagem 2.">
         <img src="imagens/img2.png" alt="Imagem 2">
-        <div class="content-text">Texto 2</div>
       </div>
-      <div class="min-circle" style="top: 70%; left: 85%; transform: translate(-50%, 0);" data-img="imagens/img3.png" data-title="Título 3" data-text="Suspendisse potenti. Proin vel dolor nec libero facilisis cursus.">
+      <div class="min-circle" style="top: 70%; left: 85%; transform: translate(-50%, 0);" data-img="imagens/img3.png" data-title="Título 3" data-text="Descrição fictícia para a imagem 3.">
         <img src="imagens/img3.png" alt="Imagem 3">
-        <div class="content-text">Texto 3</div>
       </div>
-      <div class="min-circle" style="top: 90%; left: 50%; transform: translate(-50%, 0);" data-img="imagens/img4.png" data-title="Título 4" data-text="Mauris ac odio at est molestie viverra.">
+      <div class="min-circle" style="top: 90%; left: 50%; transform: translate(-50%, 0);" data-img="imagens/img4.png" data-title="Título 4" data-text="Descrição fictícia para a imagem 4.">
         <img src="imagens/img4.png" alt="Imagem 4">
-        <div class="content-text">Texto 4</div>
       </div>
-      <div class="min-circle" style="top: 70%; left: 15%; transform: translate(-50%, 0);" data-img="imagens/img5.png" data-title="Título 5" data-text="Integer vehicula elit ut sapien vestibulum bibendum.">
+      <div class="min-circle" style="top: 70%; left: 15%; transform: translate(-50%, 0);" data-img="imagens/img5.png" data-title="Título 5" data-text="Descrição fictícia para a imagem 5.">
         <img src="imagens/img5.png" alt="Imagem 5">
-        <div class="content-text">Texto 5</div>
       </div>
-      <div class="min-circle" style="top: 30%; left: 15%; transform: translate(-50%, 0);" data-img="imagens/img6.png" data-title="Título 6" data-text="Etiam sit amet neque vel enim aliquet laoreet.">
+      <div class="min-circle" style="top: 30%; left: 15%; transform: translate(-50%, 0);" data-img="imagens/img6.png" data-title="Título 6" data-text="Descrição fictícia para a imagem 6.">
         <img src="imagens/img6.png" alt="Imagem 6">
-        <div class="content-text">Texto 6</div>
       </div>
     </div>
   </div>
@@ -154,23 +138,29 @@
   </div>
 
   <script>
-    // Substituir conteúdo entre o círculo central e o clicado
+    // Atualizar círculo central e o contêiner de informações
     document.querySelectorAll('.min-circle').forEach(circle => {
       circle.addEventListener('click', function () {
         const mainCircle = document.getElementById('main-circle-content');
-        const mainImgSrc = mainCircle.querySelector('img').getAttribute('src');
-        const clickedImgSrc = this.getAttribute('data-img');
+        const infoContainer = document.getElementById('info-container');
 
-        // Troca de imagens
-        mainCircle.innerHTML = `<img src="${clickedImgSrc}" alt="Imagem Central">`;
+        // Obter dados do círculo clicado
+        const mainImgSrc = mainCircle.querySelector('img').getAttribute('src');
+        const mainTitle = mainCircle.querySelector('img').getAttribute('data-title');
+        const mainText = mainCircle.querySelector('img').getAttribute('data-text');
+        const clickedImgSrc = this.getAttribute('data-img');
+        const clickedTitle = this.getAttribute('data-title');
+        const clickedText = this.getAttribute('data-text');
+
+        // Atualizar círculo central
+        mainCircle.innerHTML = `<img src="${clickedImgSrc}" alt="Imagem Central" data-title="${clickedTitle}" data-text="${clickedText}">`;
         this.querySelector('img').setAttribute('src', mainImgSrc);
         this.setAttribute('data-img', mainImgSrc);
+        this.setAttribute('data-title', mainTitle);
+        this.setAttribute('data-text', mainText);
 
-        // Atualizar o contêiner de informações
-        const infoContainer = document.getElementById('info-container');
-        const title = this.getAttribute('data-title');
-        const text = this.getAttribute('data-text');
-        infoContainer.innerHTML = `<h2>${title}</h2><p>${text}</p>`;
+        // Atualizar contêiner de informações
+        infoContainer.innerHTML = `<h2>${clickedTitle}</h2><p>${clickedText}</p>`;
       });
     });
 
