--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -206,9 +206,9 @@
       margin-bottom: 10px;
     }
 
-#sobre-nos .mv-vals .item p {
-  text-align: center;
-}
+    #sobre-nos .mv-vals .item p {
+      text-align: center;
+    }
 
     #sobre-nos blockquote {
       max-width: 600px;
@@ -242,14 +242,16 @@
       font-size: 28px;
     }
 
-  #circles-container {
-  position: relative;
-  width: 600px; /* Aumente a largura */
-  height: 600px; /* Aumente a altura */
-  margin: 0 auto 40px auto; /* Mais espaço abaixo */
-  overflow: visible; /* Permite exibir elementos fora do contêiner */
-}
+    /* Contêiner externo para centralizar tudo */
+    #circles-container {
+      position: relative;
+      width: 600px;
+      height: 600px;
+      margin: 0 auto 40px auto;
+      overflow: visible;
+    }
 
+    /* Círculo central fixo */
     #main-circle-content {
       position: absolute;
       width: 200px;
@@ -275,14 +277,28 @@
       object-fit: cover;
     }
 
+    /* Círculo pai que fará a rotação */
     #circle {
       position: absolute;
+      top: 50%;
+      left: 50%;
       width: 80%;
       height: 80%;
+      transform: translate(-50%, -50%);
       transform-origin: center;
       animation: rotate 12s linear infinite;
     }
 
+    @keyframes rotate {
+      0% {
+        transform: translate(-50%, -50%) rotate(0deg);
+      }
+      100% {
+        transform: translate(-50%, -50%) rotate(360deg);
+      }
+    }
+
+    /* Círculos menores, posicionados em torno do círculo pai */
     .min-circle {
       position: absolute;
       width: 80px;
@@ -300,38 +316,35 @@
       object-fit: cover;
     }
 
-    /* Contêiner de informações do carrossel */
-    #info-container {
+    /* MODAL (popup) */
+    .modal {
+      display: none; /* oculto por padrão */
+      position: fixed;
+      z-index: 999; /* fica acima de tudo */
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto; /* rolagem se o conteúdo for maior que a tela */
+      background-color: rgba(0, 0, 0, 0.7); /* fundo escurecido */
+    }
+
+    .modal-content {
+      background-color: #fff;
+      margin: 10% auto;
+      padding: 20px;
+      border-radius: 10px;
       width: 80%;
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 15px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-      background-color: #f9f9f9;
-      text-align: center;
-      font-family: 'Open Sans', sans-serif;
+      max-width: 500px;
+      position: relative;
     }
 
-    #info-container h2 {
-      margin: 0;
-      font-size: 18px;
-      color: #333;
-    }
-
-    #info-container p {
-      margin: 5px 0 0;
-      font-size: 14px;
-      color: #666;
-    }
-
-    @keyframes rotate {
-      0% {
-        transform: rotate(0deg);
-      }
-      100% {
-        transform: rotate(360deg);
-      }
+    .close-btn {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 28px;
+      cursor: pointer;
     }
 
     /* SEÇÃO COMO AJUDAR */
@@ -497,28 +510,6 @@
         gap: 10px;
       }
 
-      #circles-container {
-  position: relative !important; /* Adicione !important se necessário */
-  width: 600px !important;
-  height: 600px !important;
-  margin: 0 auto 20px auto !important;
-  overflow: hidden !important;
-}
-
-      #main-circle-content {
-        width: 240px;
-        height: 240px;
-      }
-
-      .min-circle {
-        width: 50px;
-        height: 50px;
-      }
-
-      #info-container {
-        font-size: 14px;
-      }
-
       #hero {
         flex-direction: column;
       }
@@ -540,6 +531,21 @@
       #depoimentos .depoimentos-container {
         flex-direction: column;
         align-items: center;
+      }
+
+      /* Ajuste no container do carrossel para telas menores */
+      #circles-container {
+        width: 300px;
+        height: 300px;
+        margin: 0 auto 20px auto;
+      }
+      #main-circle-content {
+        width: 120px;
+        height: 120px;
+      }
+      .min-circle {
+        width: 50px;
+        height: 50px;
       }
     }
   </style>
@@ -712,13 +718,23 @@
       </div>
     </div>
 
-    <!-- Contêiner de informações do carrossel -->
+    <!--
+    Exemplo: se quiser manter, comente este container; foi substituído pelo modal.
     <div id="info-container">
       <h2>Globo</h2>
       <p>Bem-vindo ao carrossel circular. Clique em um projeto para mais informações.</p>
     </div>
-
+    -->
   </section>
+
+  <!-- MODAL PARA EXIBIR INFORMAÇÕES DOS PROJETOS -->
+  <div id="modal" class="modal">
+    <div class="modal-content">
+      <span class="close-btn">&times;</span>
+      <h2 id="modal-title"></h2>
+      <p id="modal-text"></p>
+    </div>
+  </div>
 
   <!-- SEÇÃO COMO AJUDAR -->
   <section id="como-ajudar">
@@ -785,8 +801,6 @@
         <p>"Ser voluntário aqui me ensinou que a verdadeira riqueza está em servir ao próximo."</p>
         <footer>– João, voluntário</footer>
       </div>
-
-      <!-- Exemplo de mais depoimentos -->
       <!--
       <div class="depoimento">
         <img src="imagens/depoimento3.png" alt="Foto do Pastor Lucas" />
@@ -808,13 +822,12 @@
     <p>Endereço: (Seu endereço completo) | E-mail: (Seu e-mail) | Telefone: (Seu telefone)</p>
   </footer>
 
-  <!-- SCRIPT DO CARROSSEL CIRCULAR -->
+  <!-- SCRIPT DO CARROSSEL + MODAL -->
   <script>
     // Seleciona todos os mini-círculos
     document.querySelectorAll('.min-circle').forEach(circle => {
       circle.addEventListener('click', function () {
         const mainCircle = document.getElementById('main-circle-content');
-        const infoContainer = document.getElementById('info-container');
 
         // Dados atuais do círculo central
         const mainImg = mainCircle.querySelector('img');
@@ -827,7 +840,7 @@
         const clickedTitle = this.getAttribute('data-title');
         const clickedText = this.getAttribute('data-text');
 
-        // Troca o conteúdo do círculo central
+        // Troca o conteúdo do círculo central (imagem + data-attributes)
         mainCircle.innerHTML = `
           <img
             src="${clickedImgSrc}"
@@ -844,15 +857,14 @@
         this.setAttribute('data-title', mainTitle);
         this.setAttribute('data-text', mainText);
 
-        // Atualiza o contêiner de informações
-        infoContainer.innerHTML = `
-          <h2>${clickedTitle}</h2>
-          <p>${clickedText}</p>
-        `;
+        // Abre o modal com as informações do círculo clicado
+        document.getElementById('modal').style.display = 'block';
+        document.getElementById('modal-title').textContent = clickedTitle;
+        document.getElementById('modal-text').textContent = clickedText;
       });
     });
 
-    // Pausar e retomar animação ao passar o mouse
+    // Pausar e retomar animação ao passar o mouse (opcional)
     const circleElement = document.getElementById('circle');
     circleElement.addEventListener('mouseover', () => {
       circleElement.style.animationPlayState = 'paused';
@@ -860,6 +872,21 @@
     circleElement.addEventListener('mouseout', () => {
       circleElement.style.animationPlayState = 'running';
     });
+
+    // Fechar o modal
+    const closeBtn = document.querySelector('.close-btn');
+    closeBtn.addEventListener('click', () => {
+      document.getElementById('modal').style.display = 'none';
+    });
+
+    // Fechar modal ao clicar fora do conteúdo
+    window.addEventListener('click', (event) => {
+      const modal = document.getElementById('modal');
+      if (event.target === modal) {
+        modal.style.display = 'none';
+      }
+    });
   </script>
+
 </body>
 </html>
